--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,29 @@
 #titlearea {
     height: 100px;
-    background-color: rgba(0, 0, 0, 0.3);
+    background: linear-gradient(180deg, rgb(50, 50, 50), rgb(20, 20, 20));
+    border-bottom: 1px solid rgb(100, 100, 100);
+    box-shadow: 0px 3px 50px rgba(0, 0, 0, 0.5);
+    font-family: 'Exo 2';
+}
+
+#window {
     background-image: url("background_blur.jpg");
+    background-origin: border-box;
+    margin: 70px 150px 70px 150px;
+    border-radius: 15px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.5), 0px 1px 0px 1px rgba(255, 255, 255, 0.2) inset, 0px -1px 0px rgba(0, 0, 0, 0.3) inset;
 }
 
 #namelabel {
-    color: rgb(200, 200, 200);
-    font-size: 0.75em;
+    color: rgb(220, 220, 220);
+    font-size: 0.45em;
+}
+
+#namedisplay {
+    font-family: 'Dosis', sans-serif;
+    font-size: 1.5em;
+    text-shadow: 0px 2px 30px rgba(0, 0, 0, 0.4);
 }
 
 .area {
@@ -14,16 +31,19 @@
     text-align: center;
     color: rgb(240, 240, 240);
     font-family: 'Open Sans', sans-serif;
-    font-size: 4em;
+    font-size: 3em;
 }
 
 .bigbutton {
-     background-color: rgb(10, 200, 40);
-     border: 1px solid rgba(255, 255, 255, 0.4);
+     /*background-color: rgb(10, 200, 40);*/
+     background: linear-gradient(180deg, rgb(10, 200, 40), rgb(0, 150, 10));
+     border: 1px solid rgba(0, 0, 0, 0.4);
      display: inline-block;
      padding: 10px 25px 10px 25px;
      user-select: none;
      cursor: default;
+     box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.3), 0px 1px 0px 1px rgba(255, 255, 255, 0.4) inset;
+     border-radius: 8px;
  }
 
 body {
